Updating to BEM naming

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <nav class="nav-bar">
-      <div class="nav-bar-top">
+      <div class="nav-bar__top">
         <h1 class="nav-bar__heading">Bandsite</h1>
       </div>
       <div class="nav-bar__menu nav-bar__menu-tablet">
