Updated createCard() function to take correct object

--- a/index.html
+++ b/index.html
@@ -237,14 +237,6 @@
 
                         <button type = "submit" class = "conversation__right--commentbutton">Comment</button>
                     </form>
-
-                    <!-- <label for="nameInput" class="input-label">Name</label>
-                    <input type="text" class="conversation__nameinput" placeholder="Enter your name">
-            
-                    <label for="commentInput" class="input-label">Comment</label>
-                    <input type="text" class="conversation__commentinput" placeholder="Add a new comment">
-            
-                    <a class="conversation__right--commentbutton">Comment</a> -->
                 </div>
             </div>
 
@@ -298,7 +290,8 @@
             />
           </div>
           <div class="footer-mobile-right">
-            <h1 class="footer-lower__header uppercase">Bandsite</h1>
+            <!-- <h1 class="footer-lower__header uppercase">Bandsite</h1> -->
+            <img src="../assets/logos/Logo-bandsite.svg" alt="" class = nav-bar__heading--img>
           </div>
         </span>
       </div>
@@ -431,7 +424,8 @@
       </div>
 
       <div class="footer-lower">
-        <h1 class="footer-lower__header uppercase">Bandsite</h1>
+        <!-- <h1 class="footer-lower__header uppercase">Bandsite</h1> -->
+        <img src="../assets/logos/Logo-bandsite.svg" alt="" class = nav-bar__heading--img>
         <h4 class="footer-lower__copyright">
           Copyright The Bees Knees © 2021 All Rights Reserved
         </h4>
