--- a/pages/shows.html
+++ b/pages/shows.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Band Site</title>
     <link rel="stylesheet" href="../styles/bio.css">
+    <script src="../scripts/build-shows-page.js" defer></script>
 </head>
 
 <body>
@@ -18,13 +19,13 @@
         <div class="nav-bar__menu nav-bar__menu-tablet">
             <ul class="nav-bar__list">
                 <div class="nav-bar__list-container nav-bar__list-container-selected">
-                    <a href="./pages/shows.html" class="nav-bar__list-item">
+                    <a href="../index.html" class="nav-bar__list-item">
                         <li>Biography</li>
                     </a>
                 </div>
                 <div class="nav-bar__list-container">
                     <a href="#" class="nav-bar__list-item">
-                        <li href="./">Shows</li>
+                        <li href="./shows.html">Shows</li>
                     </a>
                 </div>
             </ul>
@@ -46,23 +47,19 @@
     <!-- <span class="bees-knees">
         <h2 class="bees-knees__header">The bees knees</h2>
       </span> -->
+    <h2 class="shows__header">Shows</h2>
     <div class="shows">
-        <h2 class="shows__header">Shows</h2>
-        <div class="about-musicians_img-tablet">
-            <img src="./assets/images/band.jpg" alt=" band picture" class="about-musicians__img-band-tablet" />
-        </div>
-
        <div class = "shows__details">
-           <h4 class = "shows__details--header">Date</h4>
+           <!-- <p class = "shows__details--header">Date</p>
            <p class = "shows__details--date">Mon Sept 6 2021</p>
 
-           <h4 class = "shows__details--header">Venue</h4>
+           <p class = "shows__details--header">Venue</p>
            <p class = "shows__details--venue">Ronald Lane</p>
 
-           <h4 class = "shows__details--header">Location</h4>
+           <p class = "shows__details--header">Location</p>
            <p class = "shows__details--location">Sanfransisco, CA</p>
 
-           <a class = "shows__details--buybutton">Buy Tickets</a>
+           <a class = "shows__details--buybutton">Buy Tickets</a> -->
        </div>
     </div>
 
@@ -78,7 +75,8 @@
                     <img src="../assets/icons/SVG/Icon-twitter.svg" alt="twitter_logo" class="footer-mobile__icon" />
                 </div>
                 <div class="footer-mobile-right">
-                    <h1 class="footer-lower__header uppercase">Bandsite</h1>
+                    <!-- <h1 class="footer-lower__header uppercase">Bandsite</h1> -->
+                    <img src="../assets/logos/Logo-bandsite.svg" alt="" class = nav-bar__heading--img>
                 </div>
             </span>
         </div>
@@ -201,7 +199,8 @@
         </div>
 
         <div class="footer-lower">
-            <h1 class="footer-lower__header uppercase">Bandsite</h1>
+            <!-- <h1 class="footer-lower__header uppercase">Bandsite</h1> -->
+            <img src="../assets/logos/Logo-bandsite.svg" alt="" class = nav-bar__heading--img>
             <h4 class="footer-lower__copyright">
                 Copyright The Bees Knees © 2021 All Rights Reserved
             </h4>
