Updated UI for tablet responsive design

--- a/index.html
+++ b/index.html
@@ -239,27 +239,8 @@
                     </form>
                 </div>
             </div>
-
+            <!-- Dynamic convestation container -->
             <div class = "conversation__users">
-                <!-- <div class = "conversation__users--container">
-                    <div class="conversation__users--img">
-                        <div class="conversation__img">
-                        </div>
-                    </div>
-                    <div class="conversation__users--details">
-                        <div class = "details__wrapper">
-                            <div class = "details__wrapper--name">
-                                Connor Walton
-                            </div>
-                            <div class = "details__wrapper--date">
-                                    02/17/2021    
-                            </div>
-                        </div>
-                        <div class = "details-paragraph">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis veritatis recusandae obcaecati consequatur, pariatur qui id, aperiam fuga cupiditate perspiciatis exercitationem minus dicta culpa magni aspernatur repellendus autem beatae veniam?
-                        </div>
-                    </div>
-                </div> -->
                 
             </div>
         <div>
@@ -432,7 +413,8 @@
       </div>
 
       <!-- Footer Mobile -->
-    </footer>
+    </footer> 
+    <!-- Script for the dynamic conversations -->
     <script src="./scripts/index-page.js"></script>
   </body>
 </html>
