Updates to Form css and navbar link styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="nav-bar__menu nav-bar__menu-tablet">
         <ul class="nav-bar__list">
           <div class="nav-bar__list-container nav-bar__list-container-selected">
-            <a href="#" class="nav-bar__list-item">
+            <a href="./index.html" class="nav-bar__list-item">
               <li>Biography</li>
             </a>
           </div>
