--- a/pages/shows.html
+++ b/pages/shows.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Band Site</title>
     <link rel="stylesheet" href="../styles/bio.css" />
+    <link rel="stylesheet" href="../styles/partials/_global.scss">
+    <link rel="stylesheet" href="../styles/shows.css">
     <script src="../scripts/build-shows-page.js" defer></script>
   </head>
 
