New file, getComments() gets the comments from endpoint and postComments() posts comments to endpoint give input name and comment from user

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Band Site</title>
     <link rel="stylesheet" href="./styles/bio.css" />
     <link rel="stylesheet" href="./styles/partials/_global.scss" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <!-- <script src="./scripts/index-page.js" defer></script> -->
   </head>
 
@@ -440,6 +441,7 @@
       <!-- Footer Mobile -->
     </footer>
     <!-- Script for the dynamic conversations -->
-    <script src="./scripts/index-page.js"></script>
+    <!-- <script src="./scripts/index-page.js"></script> -->
+    <script src = "./scripts/index-axios.js"></script>
   </body>
 </html>
