Updated index-axios.js to load the getComments function on start, new file build-shows-axios.js and updated shows.html with axios and new js file import

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../styles/bio.css" />
     <link rel="stylesheet" href="../styles/partials/_global.scss" />
     <link rel="stylesheet" href="../styles/shows.css" />
-    <script src="../scripts/build-shows-page.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../scripts/build-shows-axios.js" defer></script>
   </head>
 
   <body>
