--- a/pages/shows.html
+++ b/pages/shows.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Band Site</title>
     <link rel="stylesheet" href="../styles/bio.css" />
-    <link rel="stylesheet" href="../styles/partials/_global.scss" />
     <link rel="stylesheet" href="../styles/shows.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../scripts/build-shows-axios.js" defer></script>
@@ -18,7 +17,7 @@
         <a href="../index.html"
           ><img
             src="../assets/logos/Logo-bandsite.svg"
-            alt=""
+            alt="Nav Bar Bandsite Logo"
             class="nav-bar__heading--img"
         /></a>
       </div>
@@ -51,25 +50,10 @@
             class="soundcloud-iframe"
             width="100%"
             height="166"
-            scrolling="no"
             frameborder="no"
             allow="autoplay"
             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/666328004&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
           ></iframe>
-          <div
-            style="
-              font-size: 10px;
-              color: #cccccc;
-              line-break: anywhere;
-              word-break: normal;
-              overflow: hidden;
-              white-space: nowrap;
-              text-overflow: ellipsis;
-              font-family: Interstate, Lucida Grande, Lucida Sans Unicode,
-                Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
-              font-weight: 100;
-            "
-          ></div>
         </span>
       </div>
     </span>
@@ -82,7 +66,7 @@
         <p class="shows__details--tablet-header">Location</p>
         <p></p>
       </span>
-      <div class="shows__details">
+      <div class="">
         <div></div>
       </div>
     </div>
@@ -113,7 +97,7 @@
             <!-- <h1 class="footer-lower__header uppercase">Bandsite</h1> -->
             <img
               src="../assets/logos/Logo-bandsite.svg"
-              alt=""
+              alt="Footer Logo"
               class="nav-bar__heading--img"
             />
           </div>
@@ -251,7 +235,7 @@
         <!-- <h1 class="footer-lower__header uppercase">Bandsite</h1> -->
         <img
           src="../assets/logos/Logo-bandsite.svg"
-          alt=""
+          alt="Footer Logo"
           class="nav-bar__heading--img"
         />
         <h4 class="footer-lower__copyright">
