added EventListener to watch for click of shows, checks class name and updates background

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -66,7 +66,7 @@
         <p class="shows__details--tablet-header">Location</p>
         <p></p>
       </span>
-      <div class="">
+      <div class="shows__details">
         <div></div>
       </div>
     </div>
